# llm-bench

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  brainstorming.md  install.bat  pyproject.toml
.agent_docs/: architecture.md  configuration.md  evaluation.md  makefile.md  metrics.md  ssl-streaming.md
config/: README.md  config.yaml
config/prompts/: code-quality.yaml  quality.yaml
docs/: metrics-glossary.md  operator-guide.md
specs/: 2026-06-24_09:28:00-llm-bench-core.md  BACKLOG.md
specs/drift/: 2026-06-24_10:12:48-python-version.md  2026-06-25_09-19-18-implementation-drift.md
src/llm_bench/: __init__.py  __main__.py  analyze.py  config.py  dashboards.py  evaluation.py  llm_bench.py  local_embed.py  logging_config.py  metrics.py  prompts.py  runner.py  serve.py  tracing.py  version.py
tests/: conftest.py  test_dashboards.py  test_eval_quality_score.py  test_harness_selftest.py  test_local_embed.py  test_observability.py  test_sc001_engine.py  test_sc001_metrics.py  test_sc001_storage.py  test_sc002_openloop.py  test_sc004_eval.py  test_sc005_tooling.py  test_sc006_analyze.py  test_sc007_config.py  test_serve.py  test_smoke.py
